test/cases/compile_errors/function_with_invalid_return_type.zig
export fn foo() boid {}

// error
// backend=stage2
// target=native
//
// :1:17: error: use of undeclared identifier 'boid'
